try fixing overflow-hidden with wrapper

--- a/portfolio-ziqi-fang/src/index.css
+++ b/portfolio-ziqi-fang/src/index.css
@@ -20,3 +20,7 @@
 .hide-down-arrow {
   display:none;
 }
+
+html, body {
+  overflow: scroll;
+}
